# bevy_rapier

./: Cargo.toml
bevy_rapier2d/: Cargo.toml
bevy_rapier3d/: Cargo.toml
src/physics/: plugins.rs
src/render/: systems.rs
