[workspace]
members = ["bevy_rapier2d", "bevy_rapier3d"]
resolver = "2"

[profile.release]
codegen-units = 1

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", commit = "76ec709" }

# nalgebra = { version = "0.29", features = [ "convert-glam015" ] }
#parry2d = { path = "../parry/build/parry2d" }
#parry3d = { path = "../parry/build/parry3d" }
#rapier2d = { path = "../rapier/build/rapier2d" }
#rapier3d = { path = "../rapier/build/rapier3d" }

parry2d = { git = "https://github.com/deontologician/parry", branch = "bevy-components" }
parry3d = { git = "https://github.com/deontologician/parry", branch = "bevy-components" }
rapier2d = { git = "https://github.com/deontologician/rapier", branch = "bevy-components" }
rapier3d = { git = "https://github.com/deontologician/rapier", branch = "bevy-components" }
